Update color palette (#39)
* restore variables
* fix SCSS errors
* restore old palette
* add some grid layout

--- a/source/stylesheets/_fonts.css.scss
+++ b/source/stylesheets/_fonts.css.scss
@@ -2,7 +2,7 @@
 
 <p>This will be in Raleway.</p>
 
-<h1 class="header">This will also be in Raleway.</h1>
+<h1>This will also be in Raleway.</h1>
 */
 
 body {
