--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -4,12 +4,13 @@
 .page {
   display: grid;
   grid-gap: 1em;
-  justify-items: center;
-  margin: 0 auto;
   padding: 2vh 2vw;
 }
-
+header {
+  grid-row-start: 2;
+}
 nav {
+  grid-column-start: 2;
   ul {
     display: grid;
     grid-column-gap: 1em;
