49: reduce name to minimum

--- a/source/_default.html.erb
+++ b/source/_default.html.erb
@@ -1,16 +1,12 @@
 
       <h2>
-          Melanie Archer 
+          M. Archer 
       </h2>
       <p>I am a front-end developer (JavaScript, CSS) working on projects near Oakland, California, USA.</p>
       
           <ul>
-            <li><a href="mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos">Contact me</a></li>
-      <li>
-          <a href="//www.twitter.com/mejarc">
-            Twitter
-          </a>
-        </li>
+            <li><a href="mailto:mejarc@pm.me?subject=ping%20from%20twobanjos">Contact me</a></li>
+     
         <li>
           <a href="//www.linkedin.com/in/mejarc">
             LinkedIn 
