--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,5 +1,5 @@
     <footer>
       <p>
-      All content &copy;1998  &#8211; <%= footer_date %> Melanie Archer, unless otherwise indicated.
+      All content &copy;1998  &#8211; <%= footer_date %> M. Archer, unless otherwise indicated.
       </p>
     </footer>
