--- a/source/about-site.html.erb
+++ b/source/about-site.html.erb
@@ -2,7 +2,7 @@
 title: About this web site
 ---
 <h1><%= current_page.data.title %></h1>
-<p>First launched in 1998, Two Banjos At Once serves as brochure, laboratory, and vanity press  for its sole author, Web developer  <%= link_to 'Melanie Archer', '/about-me' %>.
+<p>First launched in 1998, Two Banjos At Once serves as brochure, laboratory, and vanity press  for its sole author, Web developer  <%= link_to 'M. Archer', '/about-me' %>.
 </p>
 <p>The alert reader will find no banjo-related content in these pages.  I enjoy your banjo-related queries nonetheless.
 </p>
